start cleaning up a bit

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,7 @@
-Pint
-Unum
+pint
 astropy
-ez-setup
-ipython
-magnitude
+forallpeople
+physipy
+pandas
 matplotlib
-numericalunits
-piquant
-pyface
-quantities
-traits
-traitsui
-units
+seaborn
